# SimpleCADAPI

./: .gitignore  MANIFEST.in  README.md  TEST_AND_EXAMPLES.md  examples.py  pyproject.toml
auto_tools/: auto_docs_gen.py  evolution.py  make_export.py
docs/: Body.md  Point.md  Sketch.md  boolean_operations.md  convenience_functions.md  cut.md  extrude.md  fillet.md  make_box.md  make_circle.md  make_cylinder.md  revolve.md  union.md
docs/api/: README.md  add_part_rassembly.md  and_.md  bounds_rbbox.md  chamfer_rsolid.md  clear_constraints_rassembly.md  clone_assembly_rassembly.md  constrain_coincident_rassembly.md  constrain_concentric_rassembly.md  constrain_distance_rassembly.md  constrain_offset_rassembly.md  cut_rsolidlist.md  eval_rarray.md  eval_rscalar.md  export_step.md  extrude_rsolid.md  fillet_rsolid.md  geo.md  helical_sweep_rsolid.md  intersect_rscalarfield.md  intersect_rsolidlist.md  linear_pattern_rsolidlist.md  make_angle_arc_redge.md  (+39 more)
examples_output/: advanced_container.stl  complex_loft.stl  gear_shape.stl  mechanical_part.stl  nested_structure.stl  spline_shape.stl  swept_shape.stl  symmetric_part.stl
refactor-plan/: tagging.md
sandbox/: constraint_gear_mesh_showcase.py  create_gear.py  flange_model.stl  gear_case.py  hex_socket_bolt.step  hex_socket_bolt.stl  shock_absorber.py  test.py
scripts/: ragflow_env_example.sh  ragflow_sync.py  sync_ragflow_docs.py
test/: comprehensive_test.py  test_all_features.py  test_auto_docs_gen.py  test_field_surface.py  test_make_export.py  test_ql.py  test_skill_pack.py  test_tagging_refactor.py
(+121 files in other folders)
